<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="#8c887b">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:weightSum="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.14">

            <Button
                android:id="@+id/buttonVizio"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="irSend"
                android:text="@string/vizio"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                style="@style/ButtonTheme"
                android:layout_weight=".14" />

            <Button
                android:id="@+id/buttonFixVizio"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="irSend"
                android:text="@string/hdmi"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                style="@style/ButtonTheme" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonSamsung"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="irSend"
            android:text="@string/samsung"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_weight="0.14"
            style="@style/ButtonTheme" />

        <Button
            android:id="@+id/buttonSanyo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="irSend"
            android:text="@string/sanyo"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_weight="0.14"
            style="@style/ButtonTheme" />

        <Button
            android:id="@+id/buttonPanasonic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="irSend"
            android:text="@string/panasonic"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_weight="0.14"
            style="@style/ButtonTheme" />

        <Button
            android:id="@+id/buttonDynex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="irSend"
            android:text="@string/dynex"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_weight="0.14"
            android:layout_gravity="center_horizontal"
            style="@style/ButtonTheme" />

        <Button
            android:id="@+id/buttonSpam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="spamThatShit"
            android:text="@string/sts"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_weight="0.14"
            android:layout_gravity="center_horizontal"
            style="@style/ComplementaryButton" />

    </LinearLayout>


</RelativeLayout>
